Fix issues for "GNOME Extensions" submission review
- Add new line between functions and starting classes
- Moving files that are only used in prefs.ts from "common" to "prefs"
- Remove reduntdant call to run_dispose() in altTab.ts and snapWindow.ts
- Refactor arrow.ts to use dependency injection instead of using `lookupByUUID()`
- remove the timeout on destroy and also before creating a new one in altTab.ts
- Setup prettier for the project
- Update eslint rules to address some format issues in review

--- a/extension/stylesheet.css
+++ b/extension/stylesheet.css
@@ -24,8 +24,8 @@
 
 .gie-arrow-icon {
     color: #396bd7;
-    margin: 4px 4px;  /* (30+2 - 25)/2 */
-    icon-size: 24px,
+    margin: 4px 4px; /* (30+2 - 25)/2 */
+    icon-size: 24px;
 }
 
 .gie-outer-circle {
