- Update readme to include new customisation options - Update gesture menu to make it clearer on what each option does - Add new additional customisation options (more flexibility for user to map gestures to actions) - Fix bug: show desktop not working

--- a/extension/ui/customizations.ui
+++ b/extension/ui/customizations.ui
@@ -24,11 +24,11 @@
                 <child>
                     <object class="AdwActionRow">
                         <property name="title" translatable="yes">Touchpad swipe speed</property>
+                        <property name="subtitle">Make the action triggered by a swipe gesture happen faster or slower</property>
 
                         <child>
                             <object class="GtkScale" id="touchpad-speed-scale">
-                                <!-- <property name="width-request">250</property> -->
-
+                                <property name="width-request">150</property>
                                 <property name="hexpand">true</property>
                                 <property name="draw-value">no</property>
                                 <!-- <signal name="value-changed" handler="touchpad_speed_changed" object="touchpadspeed_speed_display_value"/> -->
@@ -60,11 +60,50 @@
                     </object>
                 </child>
 
+                <!-- Touchpad pinch speed -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Touchpad pinch speed</property>
+                        <property name="subtitle">Make the action triggered by a pinch gesture happen faster or slower</property>
+
+                        <child>
+                            <object class="GtkScale" id="touchpad-pinch-speed">
+                                <property name="width-request">150</property>
+                                <property name="hexpand">true</property>
+                                <property name="draw-value">no</property>
+                                <!-- <signal name="value-changed" handler="touchpad_speed_changed" object="touchpadspeed_speed_display_value"/> -->
+                                <property name="adjustment">
+                                    <object class="GtkAdjustment">
+                                        <property name="lower">-3.3219280948873626</property>
+                                        <property name="upper">3.3219280948873626</property>
+                                        <property name="step-increment">0.01</property>
+                                    </object>
+                                </property>
+                                <marks>
+                                    <mark value="-1" position="bottom"></mark>
+                                    <mark value="0" position="bottom"></mark>
+                                    <mark value="1" position="bottom"></mark>
+                                </marks>
+                            </object>
+                        </child>
+
+                        <child>
+                            <object class="GtkEditableLabel" id="touchpad-pinch-speed_display-value">
+                                <property name="valign">center</property>
+                                <property name="max_width_chars">5</property>
+                                <property name="editable">False</property>
+                                <property name="can-focus">False</property>
+                                <property name="text">1.00</property>
+                            </object>
+                        </child>
+
+                    </object>
+                </child>
+
                 <!-- Follow natural swipe -->
                 <child>
                     <object class="AdwActionRow">
-                        <property name="title" translatable="yes">Follow natural swipe</property>
-                        <property name="subtitle">Similar to natural scrolling. Swipe moves the content, not the view</property>
+                        <property name="title" translatable="yes">Follow natural swipe for workspace switching</property>
                         <child>
                         <object class="GtkSwitch" id="follow-natural-scroll">
                             <property name="valign">center</property>
@@ -83,6 +122,34 @@
                             <object class="GtkSwitch" id="default-overview-gesture-direction">
                                 <property name="valign">center</property>
                                 <property name="active">False</property>
+                            </object>
+                        </child>
+                    </object>
+                </child>
+
+                <!-- Enable vertical swipe for application specific gestures -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Enable vertical swipe for app gestures</property>
+                        <property name="subtitle">[Experimental] Need to disbale 3/4-fingers vertical swipe to activate</property>
+                        <child>
+                            <object class="GtkSwitch" id="enable-vertical-app-gesture">
+                                <property name="valign">center</property>
+                                <property name="active">False</property>
+                            </object>
+                        </child>
+                    </object>
+                </child>
+
+                <!-- Minimize window -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Enable Minimize window for Window Manipulation</property>
+                        <property name="subtitle">Minimize window using vertical swipe. This will disable tiling gesture. Swipe down to activate</property>
+                        <child>
+                            <object class="GtkSwitch" id="allow-minimize-window">
+                                <property name="valign">center</property>
+                                <property name="active">True</property>
                             </object>
                         </child>
                     </object>
@@ -114,46 +181,6 @@
                                 <property name="value">150</property>
                             </object>
                         </child>
-                    </object>
-                </child>
-
-                <!-- Touchpad pinch speed -->
-                <child>
-                    <object class="AdwActionRow">
-                        <property name="title" translatable="yes">Touchpad pinch speed</property>
-
-                        <child>
-                            <object class="GtkScale" id="touchpad-pinch-speed">
-                                <!-- <property name="width-request">250</property> -->
-
-                                <property name="hexpand">true</property>
-                                <property name="draw-value">no</property>
-                                <!-- <signal name="value-changed" handler="touchpad_speed_changed" object="touchpadspeed_speed_display_value"/> -->
-                                <property name="adjustment">
-                                    <object class="GtkAdjustment">
-                                        <property name="lower">-3.3219280948873626</property>
-                                        <property name="upper">3.3219280948873626</property>
-                                        <property name="step-increment">0.01</property>
-                                    </object>
-                                </property>
-                                <marks>
-                                    <mark value="-1" position="bottom"></mark>
-                                    <mark value="0" position="bottom"></mark>
-                                    <mark value="1" position="bottom"></mark>
-                                </marks>
-                            </object>
-                        </child>
-
-                        <child>
-                            <object class="GtkEditableLabel" id="touchpad-pinch-speed_display-value">
-                                <property name="valign">center</property>
-                                <property name="max_width_chars">5</property>
-                                <property name="editable">False</property>
-                                <property name="can-focus">False</property>
-                                <property name="text">1.00</property>
-                            </object>
-                        </child>
-
                     </object>
                 </child>
 
