--- a/extension/ui/customizations.ui
+++ b/extension/ui/customizations.ui
@@ -28,7 +28,7 @@
 
                         <child>
                             <object class="GtkScale" id="touchpad-speed-scale">
-                                <property name="width-request">150</property>
+                                <property name="width-request">50</property>
                                 <property name="hexpand">true</property>
                                 <property name="draw-value">no</property>
                                 <!-- <signal name="value-changed" handler="touchpad_speed_changed" object="touchpadspeed_speed_display_value"/> -->
@@ -68,7 +68,7 @@
 
                         <child>
                             <object class="GtkScale" id="touchpad-pinch-speed">
-                                <property name="width-request">150</property>
+                                <property name="width-request">50</property>
                                 <property name="hexpand">true</property>
                                 <property name="draw-value">no</property>
                                 <!-- <signal name="value-changed" handler="touchpad_speed_changed" object="touchpadspeed_speed_display_value"/> -->
@@ -89,6 +89,45 @@
 
                         <child>
                             <object class="GtkEditableLabel" id="touchpad-pinch-speed_display-value">
+                                <property name="valign">center</property>
+                                <property name="max_width_chars">5</property>
+                                <property name="editable">False</property>
+                                <property name="can-focus">False</property>
+                                <property name="text">1.00</property>
+                            </object>
+                        </child>
+
+                    </object>
+                </child>
+
+                <!-- Volume control speed -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Volume control speed</property>
+                        <property name="subtitle">Adjust the rate of change for volume control by swipe gesture</property>
+
+                        <child>
+                            <object class="GtkScale" id="volume-control-speed">
+                                <property name="width-request">50</property>
+                                <property name="hexpand">true</property>
+                                <property name="draw-value">no</property>
+                                <property name="adjustment">
+                                    <object class="GtkAdjustment">
+                                        <property name="lower">-3.3219280948873626</property>
+                                        <property name="upper">3.3219280948873626</property>
+                                        <property name="step-increment">0.01</property>
+                                    </object>
+                                </property>
+                                <marks>
+                                    <mark value="-1" position="bottom"></mark>
+                                    <mark value="0" position="bottom"></mark>
+                                    <mark value="1" position="bottom"></mark>
+                                </marks>
+                            </object>
+                        </child>
+
+                        <child>
+                            <object class="GtkEditableLabel" id="volume-control-speed_display-value">
                                 <property name="valign">center</property>
                                 <property name="max_width_chars">5</property>
                                 <property name="editable">False</property>
