--- a/extension/ui/customizations.ui
+++ b/extension/ui/customizations.ui
@@ -14,7 +14,7 @@
     <object class="AdwPreferencesPage" id="customizations_page">
         <property name="title">Misc</property>
         <property name="icon-name">emblem-system-symbolic</property>
-        
+
         <!-- Customizations -->
         <child>
             <object class="AdwPreferencesGroup">
@@ -139,6 +139,45 @@
                     </object>
                 </child>
 
+                <!-- Brightness control speed -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Brightness control speed</property>
+                        <property name="subtitle">Adjust the rate of change for brightness control by swipe gesture</property>
+
+                        <child>
+                            <object class="GtkScale" id="brightness-control-speed">
+                                <property name="width-request">100</property>
+                                <property name="hexpand">true</property>
+                                <property name="draw-value">no</property>
+                                <property name="adjustment">
+                                    <object class="GtkAdjustment">
+                                        <property name="lower">-3.3219280948873626</property>
+                                        <property name="upper">3.3219280948873626</property>
+                                        <property name="step-increment">0.01</property>
+                                    </object>
+                                </property>
+                                <marks>
+                                    <mark value="-1" position="bottom"></mark>
+                                    <mark value="0" position="bottom"></mark>
+                                    <mark value="1" position="bottom"></mark>
+                                </marks>
+                            </object>
+                        </child>
+
+                        <child>
+                            <object class="GtkEditableLabel" id="brightness-control-speed_display-value">
+                                <property name="valign">center</property>
+                                <property name="max_width_chars">5</property>
+                                <property name="editable">False</property>
+                                <property name="can-focus">False</property>
+                                <property name="text">1.00</property>
+                            </object>
+                        </child>
+
+                    </object>
+                </child>
+
                 <!-- Follow natural swipe -->
                 <child>
                     <object class="AdwActionRow">
@@ -166,11 +205,37 @@
                     </object>
                 </child>
 
+                <!-- Invert volume direction -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Invert volume gesture direction</property>
+                        <child>
+                        <object class="GtkSwitch" id="invert-volume-gesture-direction">
+                            <property name="valign">center</property>
+                            <property name="active">False</property>
+                        </object>
+                        </child>
+                    </object>
+                </child>
+
+                <!-- Invert brightness direction -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Invert brightness gesture direction</property>
+                        <child>
+                        <object class="GtkSwitch" id="invert-brightness-gesture-direction">
+                            <property name="valign">center</property>
+                            <property name="active">False</property>
+                        </object>
+                        </child>
+                    </object>
+                </child>
+
                 <!-- Enable vertical swipe for application specific gestures -->
                 <child>
                     <object class="AdwActionRow">
                         <property name="title" translatable="yes">Enable vertical swipe for app gestures</property>
-                        <property name="subtitle">[Experimental] Need to disbale 3/4-fingers vertical swipe to activate</property>
+                        <property name="subtitle">[Experimental] Need to disable 3/4-fingers vertical swipe to activate</property>
                         <child>
                             <object class="GtkSwitch" id="enable-vertical-app-gesture">
                                 <property name="valign">center</property>
