**Add media control support via horizontal swipe gestures** Integrates media control gestures to switch tracks using horizontal swipe gestures. Updates schema, UI, and gesture handling logic accordingly.

--- a/extension/ui/gestures.ui
+++ b/extension/ui/gestures.ui
@@ -32,6 +32,7 @@
             <item translatable="yes">Window Switching</item>
             <item translatable="yes">Volume Control</item>
             <item translatable="yes">Brightness Control</item>
+            <item translatable="yes">Media Control</item>
         </items>
     </object>
 
