**Extend media control support with vertical swipe gestures and customizable settings** Adds vertical swipe gestures for media controls. Introduces adjustable media control speed and an option to invert gesture direction. Updates UI, schema, and core logic to accommodate these enhancements.

--- a/extension/ui/gestures.ui
+++ b/extension/ui/gestures.ui
@@ -21,6 +21,7 @@
             <item translatable="yes">Volume Control</item>
             <item translatable="yes">Brightness Control</item>
             <item translatable="yes">Window Manipulation</item>
+            <item translatable="yes">Media Control</item>
         </items>
     </object>
 
@@ -32,6 +33,7 @@
             <item translatable="yes">Window Switching</item>
             <item translatable="yes">Volume Control</item>
             <item translatable="yes">Brightness Control</item>
+            <item translatable="yes">Window Manipulation</item>
             <item translatable="yes">Media Control</item>
         </items>
     </object>
