--- a/extension/ui/customizations.ui
+++ b/extension/ui/customizations.ui
@@ -139,6 +139,45 @@
                     </object>
                 </child>
 
+                <!-- Media control speed -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Media control speed</property>
+                        <property name="subtitle">Adjust the rate of change for media control by swipe gesture</property>
+
+                        <child>
+                            <object class="GtkScale" id="media-control-speed">
+                                <property name="width-request">100</property>
+                                <property name="hexpand">true</property>
+                                <property name="draw-value">no</property>
+                                <property name="adjustment">
+                                    <object class="GtkAdjustment">
+                                        <property name="lower">-3.3219280948873626</property>
+                                        <property name="upper">3.3219280948873626</property>
+                                        <property name="step-increment">0.01</property>
+                                    </object>
+                                </property>
+                                <marks>
+                                    <mark value="-1" position="bottom"></mark>
+                                    <mark value="0" position="bottom"></mark>
+                                    <mark value="1" position="bottom"></mark>
+                                </marks>
+                            </object>
+                        </child>
+
+                        <child>
+                            <object class="GtkEditableLabel" id="media-control-speed_display-value">
+                                <property name="valign">center</property>
+                                <property name="max_width_chars">5</property>
+                                <property name="editable">False</property>
+                                <property name="can-focus">False</property>
+                                <property name="text">1.00</property>
+                            </object>
+                        </child>
+
+                    </object>
+                </child>
+
                 <!-- Brightness control speed -->
                 <child>
                     <object class="AdwActionRow">
@@ -211,6 +250,19 @@
                         <property name="title" translatable="yes">Invert volume gesture direction</property>
                         <child>
                         <object class="GtkSwitch" id="invert-volume-gesture-direction">
+                            <property name="valign">center</property>
+                            <property name="active">False</property>
+                        </object>
+                        </child>
+                    </object>
+                </child>
+
+                <!-- Invert media direction -->
+                <child>
+                    <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Invert media gesture direction</property>
+                        <child>
+                        <object class="GtkSwitch" id="invert-media-gesture-direction">
                             <property name="valign">center</property>
                             <property name="active">False</property>
                         </object>
